# shapeShortingManipulation

./: README.md
install/: local_setup.sh  setup.sh
install/avu_controller/share/avu_controller/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/avu_controller/share/avu_controller/cmake/: avu_controllerConfig.cmake
install/avu_description/share/avu_description/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/avu_description/share/avu_description/cmake/: avu_descriptionConfig.cmake
install/avu_description/share/avu_description/launch/: bringup.launch.py
install/avu_moveit/share/avu_moveit/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/moveit2/share/moveit2/: local_setup.sh  package.sh
install/pymoveit2/lib/pymoveit2/: color_detector.py  ex_ik.py  pick_and_place.py  throttle_node.py
install/pymoveit2/share/pymoveit2/: package.ps1  package.sh
log/: latest_build  latest_list
src/avu_controller/: CMakeLists.txt  package.xml
src/avu_controller/config/: avu_controllers.yaml
src/avu_controller/launch/: controller.launch.py
src/avu_description/: CMakeLists.txt
src/avu_description/launch/: display.launch.py  gazebo.launch.py
src/avu_description/urdf/: avu.urdf.xacro  avu_gazebo.xacro  blue_cube.sdf  cup.sdf  red_sphere.sdf
src/avu_moveit/: CMakeLists.txt
src/avu_moveit/config/: joint_limits.yaml
src/pymoveit2/: CMakeLists.txt
src/pymoveit2/examples/: color_and_shape_extractor.py  extract.py  pick_and_place.py  test.py  throttle_node.py
(+16 files in other folders)
